main-infra/manifests/ingress/https-redirect-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: traefik-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
